feat: реализовал всю необходимую функциональность

--- a/src/blocks/popup/_type/popup_type_info-tool-tip.css
+++ b/src/blocks/popup/_type/popup_type_info-tool-tip.css
@@ -1,3 +1,5 @@
 .popup_type_info-tool-tip {
-  margin: 73px auto 0 auto;
+  margin: 0px auto 0 auto;
+  padding: 0 0 36px 0;
+  background-color: rgba(0, 0, 0, 0);
 }
