--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,9 +1,10 @@
 .header__link {
   color: #fff;
+  height: 19px;
   text-decoration: none;
   font-size: 18px;
   font-weight: normal;
-  margin: 6px 0 0 0;
+  margin: 8px 0 0 0;
   line-height: calc(22 / 18);
   transition: opacity .2s ease-in-out;
 }
