--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -1,4 +1,5 @@
 .footer__copyright {
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 18px;
   line-height: calc(21.78 / 18);
   font-weight: 400;
